--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,7 +32,7 @@ jobs:
           echo "branch_hash=$(echo $BRANCH_HASH)" >> $GITHUB_OUTPUT
 
       - name: Configure AWS credentials
-        if: ${{ vars.HOSTING_PROVIDER == 'AWS' }}
+        if: ${{ vars.HOSTING_PROVIDER1 == 'AWS' }}
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -40,11 +40,11 @@ jobs:
           aws-region: ${{ vars.AWS_REGION }}
 
       - name: Check AWS caller identity
-        if: ${{ vars.HOSTING_PROVIDER == 'AWS' }}
+        if: ${{ vars.HOSTING_PROVIDER1 == 'AWS' }}
         run: aws sts get-caller-identity
 
       - name: Login to Amazon ECR
-        if: ${{ vars.HOSTING_PROVIDER == 'AWS' }}
+        if: ${{ vars.HOSTING_PROVIDER1 == 'AWS' }}
         id: ecr
         uses: aws-actions/amazon-ecr-login@v2
 
@@ -52,7 +52,7 @@ jobs:
         id: build
         uses: ./platform/.github/actions/build
         with:
-          hosting_provider: ${{ vars.HOSTING_PROVIDER }}
+          hosting_provider: ${{ vars.HOSTING_PROVIDER1 }}
           app_name: flask-react-template
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -60,14 +60,14 @@ jobs:
           tag: ${{ steps.extract_branch.outputs.branch_hash }}
           build_args: APP_ENV=preview
           context: app/.
-          docker_registry: ${{ vars.HOSTING_PROVIDER == 'AWS' && steps.ecr.outputs.registry || vars.DOCKER_REGISTRY }}
-          docker_username: ${{ vars.HOSTING_PROVIDER == 'AWS' && '' || vars.DOCKER_USERNAME }}
-          docker_password: ${{ vars.HOSTING_PROVIDER == 'AWS' && '' || secrets.DOCKER_PASSWORD }}
+          docker_registry: ${{ vars.HOSTING_PROVIDER1 == 'AWS' && steps.ecr.outputs.registry || vars.DOCKER_REGISTRY }}
+          docker_username: ${{ vars.HOSTING_PROVIDER1 == 'AWS' && '' || vars.DOCKER_USERNAME }}
+          docker_password: ${{ vars.HOSTING_PROVIDER1 == 'AWS' && '' || secrets.DOCKER_PASSWORD }}
 
       - name: Deploy to preview
         uses: ./platform/.github/actions/deploy
         with:
-          hosting_provider: ${{ vars.HOSTING_PROVIDER }}
+          hosting_provider: ${{ vars.HOSTING_PROVIDER1 }}
           app_name: flask-react-template
           app_env: preview
           app_hostname: '{1}.preview.platform.bettrhq.com'
@@ -76,7 +76,7 @@ jobs:
           deploy_root: app/lib/kube
           deploy_labels: gh/pr=${{ github.event.number }}
           deploy_image: ${{ steps.build.outputs.image_ref }}
-          docker_registry: ${{ vars.HOSTING_PROVIDER == 'AWS' && steps.ecr.outputs.registry || vars.DOCKER_REGISTRY }}
+          docker_registry: ${{ vars.HOSTING_PROVIDER1 == 'AWS' && steps.ecr.outputs.registry || vars.DOCKER_REGISTRY }}
           aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
           aws_region: ${{ vars.AWS_REGION }}
           do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
