feat: modularising file

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           repository: jalantechnologies/github-ci
           path: platform
-          ref: namra/feat/adding-aws-depployment 
+          ref: namra/feat/adding-aws-depployment
 
       - name: Extract branch name
         id: extract_branch
@@ -30,23 +30,6 @@ jobs:
           BRANCH_NAME=$(echo ${{ github.event.pull_request.head.ref }} | sed -e 's/^refs\/heads\///g')
           BRANCH_HASH=$(sha1sum < <(printf '%s' $BRANCH_NAME) | cut -c -15)
           echo "branch_hash=$(echo $BRANCH_HASH)" >> $GITHUB_OUTPUT
-
-      - name: Configure AWS credentials
-        if: ${{ vars.HOSTING_PROVIDER1 == 'AWS' }}
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ vars.AWS_REGION }}
-
-      - name: Check AWS caller identity
-        if: ${{ vars.HOSTING_PROVIDER1 == 'AWS' }}
-        run: aws sts get-caller-identity
-
-      - name: Login to Amazon ECR
-        if: ${{ vars.HOSTING_PROVIDER1 == 'AWS' }}
-        id: ecr
-        uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build Docker image
         id: build
@@ -60,9 +43,9 @@ jobs:
           tag: ${{ steps.extract_branch.outputs.branch_hash }}
           build_args: APP_ENV=preview
           context: app/.
-          docker_registry: ${{ vars.HOSTING_PROVIDER1 == 'AWS' && steps.ecr.outputs.registry || vars.DOCKER_REGISTRY }}
-          docker_username: ${{ vars.HOSTING_PROVIDER1 == 'AWS' && '' || vars.DOCKER_USERNAME }}
-          docker_password: ${{ vars.HOSTING_PROVIDER1 == 'AWS' && '' || secrets.DOCKER_PASSWORD }}
+          docker_registry: ${{ vars.DOCKER_REGISTRY }}
+          docker_username: ${{ vars.DOCKER_USERNAME }}
+          docker_password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Deploy to preview
         uses: ./platform/.github/actions/deploy
@@ -76,7 +59,7 @@ jobs:
           deploy_root: app/lib/kube
           deploy_labels: gh/pr=${{ github.event.number }}
           deploy_image: ${{ steps.build.outputs.image_ref }}
-          docker_registry: ${{ vars.HOSTING_PROVIDER1 == 'AWS' && steps.ecr.outputs.registry || vars.DOCKER_REGISTRY }}
+          docker_registry: ${{ vars.DOCKER_REGISTRY }}
           aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
           aws_region: ${{ vars.AWS_REGION }}
           do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
