--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -22,13 +22,13 @@ jobs:
         with:
           repository: jalantechnologies/github-ci
           path: platform
-          ref: v3.2.5
+          ref: v3.2.6
 
       - name: Build Docker image
         id: build
         uses: ./platform/.github/actions/build
         with:
-          app_name: flask-react-template
+          app_name: flask-react-app
           tag: production
           context: app/.
           docker_registry: ${{ vars.DOCKER_REGISTRY }}
@@ -38,7 +38,7 @@ jobs:
       - name: Deploy to production
         uses: ./platform/.github/actions/deploy
         with:
-          app_name: flask-react-template
+          app_name: flask-react-app
           app_env: production
           app_hostname: flask-react-template.platform.bettrhq.com
           branch: main
