chore: Update workflow app name and align CI/CD configs for preview and deployment (#437)
* chore: update app_name to flask-react-app in workflows

* chore: add ready_for_review event type on ci.yml and cd.yml

* chore: preview url commenting on PRs

* chore: remove preview url commenting and add envs in cd.yml

* chore: update ci version to v3.2.6

--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -6,13 +6,13 @@ on:
 
 jobs:
   clean:
-    uses: jalantechnologies/github-ci/.github/workflows/clean.yml@v3.2.5
+    uses: jalantechnologies/github-ci/.github/workflows/clean.yml@v3.2.6
     concurrency:
       group: ci-preview-${{ github.event.pull_request.head.ref }}
       cancel-in-progress: true
     with:
       hosting_provider: ${{ vars.HOSTING_PROVIDER }}
-      app_name: flask-react-template
+      app_name: flask-react-app
       app_env: preview
       branch: ${{ github.event.pull_request.head.ref }}
       docker_registry: ${{ vars.DOCKER_REGISTRY }}
