--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,46 @@ jobs:
           echo "Code review placeholder"
           echo "Future implementation: AI-powered review for architecture, security, and best practices"
 
+  security:
+    if: github.event.pull_request.draft == false
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run dependency security audit
+        shell: bash
+        run: |
+          echo "Running dependency security audits..."
+          if [ -f package.json ]; then
+            echo "::group::NPM Audit"
+            npm audit --production --audit-level=high || {
+              echo "::error ::NPM audit found vulnerabilities"
+              exit 1
+            }
+            echo "::endgroup::"
+          fi
+
+          if [ -f Pipfile.lock ] || [ -f requirements.txt ]; then
+            echo "::group::Python Audit"
+            pip install pip-audit
+            pip install pipenv
+
+            if [ -f Pipfile.lock ]; then
+              pipenv requirements > /tmp/requirements.txt
+              pip-audit -r /tmp/requirements.txt --vulnerability-service pypi || {
+                echo "::error ::pip-audit found vulnerabilities"
+                exit 1
+              }
+            elif [ -f requirements.txt ]; then
+              pip-audit -r requirements.txt --vulnerability-service pypi || {
+                echo "::error ::pip-audit found vulnerabilities"
+                exit 1
+              }
+            fi
+            echo "::endgroup::"
+          fi
+
   test:
     if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
     runs-on: ubuntu-latest
