--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,11 @@ name: ci
 
 on:
   pull_request:
-    types: [ opened, synchronize, reopened, ready_for_review ]
+    types: [ opened, synchronize, reopened ]
 
 jobs:
   lint:
-    if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -36,7 +36,7 @@ jobs:
         run: npm run lint
 
   sonarqube:
-    if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -70,62 +70,13 @@ jobs:
           pull_request_number: ${{ github.event.number }}
 
   review:
-    if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - name: Placeholder for code review
         run: |
           echo "Code review placeholder"
           echo "Future implementation: AI-powered review for architecture, security, and best practices"
-  
-
-  image_scan:
-    if: github.event.pull_request.draft == false
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Docker login
-        uses: docker/login-action@v2
-        env:
-          DOCKER_USERNAME: ${{ vars.docker_username }}
-        if: "${{ env.DOCKER_USERNAME != '' }}"
-        with:
-          registry: ${{ vars.docker_registry }}
-          username: ${{ vars.docker_username }}
-          password: ${{ secrets.docker_password }}
-
-      - name: Extract branch name
-        id: extract_branch
-        run: |
-          BRANCH_NAME=$(echo ${{ github.event.pull_request.head.ref }} | sed -e 's/^refs\/heads\///g')
-          BRANCH_HASH=$(sha1sum < <(printf '%s' $BRANCH_NAME) | cut -c -15)
-          echo "branch_hash=$(echo $BRANCH_HASH)" >> $GITHUB_OUTPUT
-
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@0.16.1  # Pin to specific SHA in production
-        with:
-          image-ref: ${{ vars.docker_registry }}/${{ vars.docker_username }}/flask-react-app:${{ steps.extract_branch.outputs.branch_hash }}
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL, HIGH'
-          exit-code: '0'
-          timeout: '10m'
-          vuln-type: 'os,library'
-          scanners: 'vuln,secret,config'
-
-      # - name: Scan Docker image for vulnerabilities
-      #   uses: aquasecurity/trivy-action@0.16.1
-      #   with:
-      #     image-ref: ${{ steps.tag.outputs.value }}:${{ inputs.tag }}
-      #     format: 'sarif'
-      #     output: 'trivy-results.sarif'
-      #     severity: ${{ inputs.trivy_severity }}
-      #     exit-code: '0'
-      #     timeout: '10m'
-      #     vuln-type: 'os,library'
-      #     scanners: 'vuln,secret,config'
 
   security:
     if: github.event.pull_request.draft == false
@@ -134,55 +85,40 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # we need full history for git diff
-
-      - name: Setup tools
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install helpers
+      - name: Run dependency security audit
+        shell: bash
         run: |
-          sudo apt-get update && sudo apt-get install -y jq
-          pip install pip-audit
+          echo "Running dependency security audits..."
+            if [ -f package.json ]; then
+              echo "::group::NPM Audit"
+              npm audit --production --audit-level=high || {
+                echo "::error ::NPM audit found vulnerabilities"
+                exit 0
+              }
+              echo "::endgroup::"
+            fi
 
-      ############################################
-      # NPM SECTION
-      ############################################
-      - name: Check for npm dependency changes
-        id: npm_changes
-        run: |
-          if git diff --quiet origin/main -- package.json; then
-            echo "changed=false" >> $GITHUB_OUTPUT
-          else
-            echo "changed=true" >> $GITHUB_OUTPUT
+            if [ -f Pipfile.lock ] || [ -f requirements.txt ]; then
+            echo "::group::Python Audit"
+            pip install pip-audit
+
+            if [ -f Pipfile.lock ]; then
+              pipenv requirements > /tmp/requirements.txt
+              pip-audit -r /tmp/requirements.txt --vulnerability-service pypi || {
+                echo "::error ::pip-audit found vulnerabilities"
+                exit 1
+              }
+            elif [ -f requirements.txt ]; then
+              pip-audit -r requirements.txt --vulnerability-service pypi || {
+                echo "::error ::pip-audit found vulnerabilities"
+                exit 1
+              }
+            fi
+            echo "::endgroup::"
           fi
 
-      - name: Audit npm dependencies (if changed)
-        if: steps.npm_changes.outputs.changed == 'true'
-        run: |
-          echo "Detected changes in package.json"
-          npm ci
-          npm audit --json > npm-audit-new.json
-
-          git checkout origin/main
-          npm ci
-          npm audit --json > npm-audit-old.json
-
-          echo "Comparing npm audits..."
-          diff <(jq '.advisories' npm-audit-old.json) <(jq '.advisories' npm-audit-new.json) || true
-
-
   test:
-    if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
