--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,37 +85,28 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run dependency security audit
-        shell: bash
+      - name: Install jq for JSON parsing
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      - name: Detect changed dependencies in package.json
+        id: deps
         run: |
-          echo "Running dependency security audits..."
-            if [ -f package.json ]; then
-              echo "::group::NPM Audit"
-              npm audit --production --audit-level=high || {
-                echo "::error ::NPM audit found vulnerabilities"
-                exit 0
-              }
-              echo "::endgroup::"
-            fi
+          BASE_BRANCH=${{ github.event.pull_request.base.ref }}
+          echo "Comparing current branch with $BASE_BRANCH..."
 
-            if [ -f Pipfile.lock ] || [ -f requirements.txt ]; then
-            echo "::group::Python Audit"
-            pip install pip-audit
+          git fetch origin $BASE_BRANCH
 
-            if [ -f Pipfile.lock ]; then
-              pipenv requirements > /tmp/requirements.txt
-              pip-audit -r /tmp/requirements.txt --vulnerability-service pypi || {
-                echo "::error ::pip-audit found vulnerabilities"
-                exit 1
-              }
-            elif [ -f requirements.txt ]; then
-              pip-audit -r requirements.txt --vulnerability-service pypi || {
-                echo "::error ::pip-audit found vulnerabilities"
-                exit 1
-              }
-            fi
-            echo "::endgroup::"
-          fi
+          # Extract dependency differences
+          DIFF=$(git diff origin/$BASE_BRANCH -- package.json | grep '^[+-]\s*"[^"]*":' || true)
+
+          echo "Dependency changes:"
+          echo "$DIFF"
+
+          # Extract only package names that changed
+          CHANGED_PKGS=$(echo "$DIFF" | grep '^[+]'\|'^-' | sed -E 's/^[+-]\s*"([^"]*)".*/\1/' | sort | uniq)
+          echo "Changed packages: $CHANGED_PKGS"
+
+          echo "changed_packages=$CHANGED_PKGS" >> $GITHUB_OUTPUT
 
   test:
     if: github.event.pull_request.draft == false
