--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,9 +111,10 @@ jobs:
         run: |
           npm ci
           echo "Auditing changed packages..."
+          AUDIT_JSON=$(npm audit --json)
           for pkg in ${{ steps.deps.outputs.changed_packages }}; do
             echo "🔍 Auditing $pkg..."
-            npm audit --json | jq --arg PKG "$pkg" '.vulnerabilities[$PKG]'
+            echo $AUDIT_JSON | jq --arg PKG "$pkg" '.vulnerabilities[$PKG]'
           done
 
   test:
