--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,10 +112,10 @@ jobs:
           npm ci
           echo "Auditing changed packages..."
           npm audit --json > audit.json
-          for pkg in ${{ steps.deps.outputs.changed_packages }}; do
-            echo "🔍 Auditing $pkg..."
-            cat audit.json | jq --arg PKG "$pkg" '.vulnerabilities[$PKG]'
-          done
+          # for pkg in ${{ steps.deps.outputs.changed_packages }}; do
+          #   echo "🔍 Auditing $pkg..."
+          #   cat audit.json | jq --arg PKG "$pkg" '.vulnerabilities[$PKG]'
+          # done
 
   test:
     if: github.event.pull_request.draft == false
