--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,11 +111,8 @@ jobs:
         run: |
           npm ci
           echo "Auditing changed packages..."
-          for pkg in ${{ steps.deps.outputs.changed_packages }}; do
-            echo "🔍 Auditing $pkg..."
-            npm audit --json | jq --arg PKG "$pkg" '.vulnerabilities[$PKG]'
-          done
-
+          npm audit
+          
   test:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
