--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,6 +140,20 @@ jobs:
           cat audit_table.md >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
+      - name: Comment PR with audit results
+        if: steps.deps.outputs.changed_packages != ''
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.TRIVY_SCAN_TOKEN }}
+          script: |
+            const body = `${process.env.table_md}`;
+            github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              body
+            })
+
           
   test:
     if: github.event.pull_request.draft == false
