--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,10 +135,7 @@ jobs:
           done
 
 
-          cat audit_table.md
-          echo "table_md<<EOF" >> $GITHUB_OUTPUT
           cat audit_table.md >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Comment PR with audit results
         if: steps.deps.outputs.changed_packages != ''
@@ -146,7 +143,7 @@ jobs:
         with:
           github-token: ${{ secrets.TRIVY_SCAN_TOKEN }}
           script: |
-            const body = `${process.env.table_md}`;
+            const body = `${{ steps.table.outputs['GITHUB_OUTPUT'] }}`;
             github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
